# python-commons

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TASKS.md  codecov.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  ruff.toml  sitemap.xml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-drafter.yml
adapters/postgresql/: index.html
adapters/s3/: index.html
api/application/: index.html
api/config/: index.html
api/kernel/: index.html
api/observability/: index.html
api/security/: index.html
api/testing/: index.html
architecture/ADR-0005-optional-extras/: index.html
architecture/diagrams/: index.html
docs/: index.md
docs/adapters/: elasticsearch.md  kafka.md  mongodb.md  postgresql.md  redis.md  s3.md
docs/api/: application.md  config.md  kernel.md  observability.md  security.md  testing.md
docs/architecture/: ADR-0001-kernel-boundaries.md  ADR-0002-outbox-inbox-idempotency.md  ADR-0003-ports-and-adapters.md  ADR-0004-async-first.md  ADR-0005-optional-extras.md  ADR-0006-result-type.md  ADR-0007-multi-tenancy.md  ADR-0008-event-sourcing.md  diagrams.md
docs/contracts/: openapi-compatibility.md
docs/examples/: locustfile.py
docs/guides/: adapters.md  migration-v1.md  quickstart.md  troubleshooting.md
docs/observability/: logging-contract.md
docs/security/: pii-redaction.md  threat-model.md
docs/versioning/: semantic-versioning.md
examples/simple_service/: app.py
search/: search_index.json
security/threat-model/: index.html
site/: 404.html  sitemap.xml
site/adapters/elasticsearch/: index.html
site/adapters/kafka/: index.html
site/adapters/mongodb/: index.html
site/adapters/redis/: index.html
site/api/config/: index.html
site/api/observability/: index.html
site/api/security/: index.html
site/architecture/ADR-0001-kernel-boundaries/: index.html
site/architecture/ADR-0002-outbox-inbox-idempotency/: index.html
site/architecture/ADR-0003-ports-and-adapters/: index.html
site/architecture/ADR-0004-async-first/: index.html
site/architecture/ADR-0006-result-type/: index.html
site/architecture/ADR-0007-multi-tenancy/: index.html
site/architecture/ADR-0008-event-sourcing/: index.html
site/contracts/openapi-compatibility/: index.html
site/guides/adapters/: index.html
site/guides/migration-v1/: index.html
site/guides/quickstart/: index.html
site/guides/troubleshooting/: index.html
site/observability/logging-contract/: index.html
site/search/: search_index.json
site/security/pii-redaction/: index.html
site/versioning/semantic-versioning/: index.html
src/mp_commons/: __init__.py
src/mp_commons/adapters/: __init__.py
src/mp_commons/application/: __init__.py
src/mp_commons/config/: __init__.py
src/mp_commons/kernel/: __init__.py
src/mp_commons/observability/: __init__.py
src/mp_commons/resilience/: __init__.py  backpressure.py  dead_letter_scheduler.py  graceful_shutdown.py
src/mp_commons/security/: __init__.py
src/mp_commons/testing/: __init__.py  tenant_isolation.py
tests/: conftest.py
tests/benchmarks/: __init__.py  bench_circuit_breaker.py  bench_command_bus.py  bench_entity_id.py  bench_logging.py  bench_rate_limiter.py  bench_retry.py  conftest.py
tests/integration/: test_cassandra.py  test_dynamodb.py  test_e2e_outbox_kafka.py  test_elasticsearch.py  test_kafka.py  test_keycloak.py  test_mongodb.py  test_nats.py  test_placeholder.py  test_postgres.py  test_pulsar.py  test_rabbitmq.py  test_redis.py  test_redis_streams.py  test_s3.py  test_saga_postgres.py  test_vault.py
tests/unit/: test_example_service.py  test_trio_compat.py
tests/unit/adapters/: __init__.py  test_alembic_migrations.py  test_azure_blob.py  test_azure_keyvault.py  test_azure_servicebus.py  test_cassandra.py  test_celery.py  test_dynamodb.py  test_elasticsearch.py  test_fastapi_adapter.py  test_fastapi_security_middleware.py  test_gcp_pubsub.py  test_gcs.py  test_graphql.py  test_grpc.py  test_grpc_server.py  test_http_clients.py  test_kafka_adapters.py  test_keycloak.py  test_mailgun.py  test_nats_adapters.py  test_nats_propagation.py  test_opensearch.py  test_opentelemetry_adapters.py  test_otel_instrumentation.py  test_prometheus.py  test_pulsar.py  test_rabbitmq_adapters.py  test_redis_adapters.py  test_redis_streams.py  test_s3.py  test_sendgrid.py  test_sqlalchemy_sqla.py  test_sqs.py  test_vault_adapters.py  test_websocket.py
tests/unit/application/: test_async_lru_cache.py  test_cache.py  test_cqrs.py  test_cqrs_decorators.py  test_email.py  test_event_sourcing.py  test_export.py  test_feature_flags.py  test_files.py  test_gdpr.py  test_i18n.py  test_inbox.py  test_masking.py  test_notifications.py  test_pagination.py  test_pipeline.py  test_rate_limit.py  test_saga.py  test_scheduler.py  test_search.py  test_uow.py  test_webhooks.py  test_workflow.py
tests/unit/config/: test_dynamic.py  test_flags.py  test_secrets.py  test_settings.py  test_settings_factory.py  test_validation.py
tests/unit/kernel/: test_audit.py  test_contracts.py  test_ddd.py  test_errors.py  test_messaging.py  test_money_properties.py  test_pii_redaction_fuzz.py  test_result_properties.py  test_security.py  test_time.py  test_types.py
tests/unit/observability/: test_adapter_health_checks.py  test_correlation.py  test_correlation_headers.py  test_events.py  test_health.py  test_logging.py  test_logging_extras.py  test_metrics.py  test_profiling.py  test_slo.py  test_tracing.py
tests/unit/resilience/: test_backpressure.py  test_bulkhead.py  test_cache_aside.py  test_circuit_breaker.py  test_circuit_breaker_stress.py  test_dead_letter_scheduler.py  test_deadline.py  test_fallback.py  test_graceful_shutdown.py  test_hedge.py  test_redis_circuit_breaker.py  test_retry.py  test_throttle.py  test_timeouts.py
tests/unit/security/: __init__.py  (+6 more)
(+384 files in other folders)
