[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "mp-commons"
dynamic = [ "version",]
description = "Platform shared library – DDD/Hexagonal building blocks for Python services"
readme = "README.md"
requires-python = ">=3.12"
keywords = [ "ddd", "hexagonal", "cqrs", "outbox", "observability", "resilience",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Typing :: Typed",]
dependencies = []

[project.license]
file = "LICENSE"

[project.optional-dependencies]
pydantic = [ "pydantic>=2.6",]
structlog = [ "structlog>=24.1",]
otel = [ "opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24", "opentelemetry-exporter-otlp>=1.24",]
tenacity = [ "tenacity>=9.0",]
crypto = [ "cryptography>=42.0",]
dotenv = [ "python-dotenv>=1.0",]
fastapi = [ "fastapi>=0.110", "starlette>=0.36", "mp-commons[otel]",]
sqlalchemy = [ "sqlalchemy>=2.0", "alembic>=1.13",]
redis = [ "redis>=5.0",]
kafka = [ "aiokafka>=0.10",]
nats = [ "nats-py>=2.6",]
rabbitmq = [ "aio-pika>=9.4",]
httpx = [ "httpx>=0.27",]
requests = [ "requests>=2.31",]
keycloak = [ "PyJWT[crypto]>=2.8", "httpx>=0.27",]
vault = [ "hvac>=2.1",]
mongodb = [ "motor>=3.3",]
all-adapters = [ "mp-commons[fastapi,sqlalchemy,redis,kafka,nats,rabbitmq,httpx,keycloak,vault,mongodb,otel]",]
dev = [ "mp-commons[all-adapters,pydantic,structlog,tenacity,crypto,dotenv]", "ruff>=0.4", "mypy>=1.10", "bcrypt>=4.1", "aiosqlite>=0.20", "pytest>=8.1", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "anyio[trio]>=4.3", "pytest-xdist>=3.5", "hypothesis>=6.100", "coverage[toml]>=7.4", "respx>=0.21", "time-machine>=2.14", "testcontainers>=4.8", "pytest-benchmark>=5.0", "mutmut>=2.4", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.24",]

[project.urls]
Homepage = "https://github.com/marcusPrado02/python-commons"
Repository = "https://github.com/marcusPrado02/python-commons"
"Bug Tracker" = "https://github.com/marcusPrado02/python-commons/issues"

[tool.uv]
[[tool.uv.index]]
name = "github-packages"
url = "https://python.pkg.github.com/marcusPrado02/simple/"
publish-url = "https://python.pkg.github.com/marcusPrado02/"
explicit = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
plugins = [ "pydantic.mypy",]
explicit_package_bases = true
mypy_path = "src"

# Optional packages not installed in the dev environment → suppress import errors
[[tool.mypy.overrides]]
module = [
    "aiobotocore.*", "aioboto3.*", "boto3.*",
    "celery.*",
    "elasticsearch.*",
    "cassandra.*",
    "pulsar.*",
    "grpc.*", "grpc_health.*",
    "azure.*",
    "google.cloud.*",
    "prometheus_client.*",
    "opensearchpy.*",
    "uuid_utils.*",
    "ulid.*",
    "aiosmtplib.*",
    "locust.*",
    "openpyxl.*",
    "pyinstrument.*",
    "watchfiles.*",
    "apscheduler.*",
    "jinja2.*",
    "PIL.*",
    "babel.*",
    "argon2.*",
    "twilio.*",
]
ignore_missing_imports = true

# Adapter/infrastructure modules use the lazy _require_X() pattern — relax strict
# checking for optional-dependency code while keeping the domain model strict.
[[tool.mypy.overrides]]
module = [
    "mp_commons.adapters.*",
    "mp_commons.application.email.*",
    "mp_commons.application.files.*",
    "mp_commons.application.export.*",
    "mp_commons.application.notifications.*",
    "mp_commons.application.scheduler.*",
    "mp_commons.application.i18n.*",
    "mp_commons.application.webhooks.*",
    "mp_commons.observability.*",
    "mp_commons.security.*",
    "mp_commons.testing.*",
    "mp_commons.config.*",
    "mp_commons.kernel.types.*",
]
warn_unused_ignores = false
disable_error_code = ["no-any-return", "no-untyped-call", "override", "misc", "union-attr", "type-arg"]

[tool.bandit]
exclude_dirs = [ "tests", "docs",]
skips = [ "B101", "B110", "B301", "B311", "B318", "B403", "B408", "B608",]
confidence = "MEDIUM"
severity = "HIGH"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mutmut]
paths_to_mutate = "src/mp_commons"
backup = false
runner = "python -m pytest -x -q"
tests_dir = "tests/unit/"

[tool.hatch.version]
path = "src/mp_commons/__init__.py"

[tool.pytest.ini_options]
testpaths = [ "tests",]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [ "-ra", "--strict-markers", "--tb=short",]
markers = [ "unit: fast, in-process tests", "integration: tests that hit real infrastructure", "contract: schema/contract tests",]

[tool.coverage.run]
source = [ "src",]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 84
exclude_lines = [ "pragma: no cover", "if TYPE_CHECKING:", "@(abc\\.)?abstractmethod", "\\.\\.\\.",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "ANN", "S", "RUF", "PLC",]
ignore = [ "ANN401", "E501", "PLC0415", "RUF002", "S101", "TC001", "TC002",]

[tool.ruff.lint.isort]
kwargs-last = true
force-sort-within-sections = true
known-first-party = [ "mp_commons",]

[tool.hatch.build.targets.wheel]
packages = [ "src/mp_commons",]
